--- a/res/css/style.css
+++ b/res/css/style.css
@@ -7,10 +7,27 @@ body {
 }
 #cookie {
   width: 400px;
+  transition: .3s;
 }
 #counter {
   font-size: 36pt;
 }
 p {
   font-size: 24pt;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+button {
+  border: 3px solid black;
+  border-radius: 8pt;
+  width: 160px;
+  height: 60px;
+  font-size: 14pt;
+  cursor: pointer;
 }
